tests/test_error.ryze
// This script will fail because it calls QQ on an empty stack
Q QQ
